--- a/src/main/resources/repair.vanilla.yml
+++ b/src/main/resources/repair.vanilla.yml
@@ -1,4 +1,6 @@
-##  Last updated on ${project.version}-b${BUILD_NUMBER}
+#
+#  Repair configuration
+#  Last updated on ${project.version}-b${BUILD_NUMBER}
 #
 # Any file named repair.*.yml in the mcmmmo folder will be loaded as a repair config
 # All repair configs have a main section titled "Repairables"
