Rework armor.yml to take item names instead of IDs in advance of 1.7 changes.
** YOU WILL NEED TO REDO YOUR armor.yml FILE **

--- a/src/main/resources/armor.yml
+++ b/src/main/resources/armor.yml
@@ -3,73 +3,62 @@
 ###
 Boots:
     Boot_1:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
+        Durability: 999
     Boot_2:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
-
+        Durability: 999
 #
 #  Settings for Chestplates
 ###
 Chestplates:
     Chestplate_1:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
+        Durability: 999
     Chestplate_2:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
-
+        Durability: 999
 #
 #  Settings for Helmets
 ###
 Helmets:
     Helmet_1:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
+        Durability: 999
     Helmet_2:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
-
+        Durability: 999
 #
 #  Settings for Leggings
 ###
 Leggings:
     Legging_1:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
+        Durability: 999
     Legging_2:
-        ID: 999
         Repairable: true
-        Repair_Material_ID: 99
+        Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
-        Durability: 9999
+        Durability: 999
