--- a/src/main/resources/repair.vanilla.yml
+++ b/src/main/resources/repair.vanilla.yml
@@ -101,7 +101,13 @@ Repairables:
         XpMultiplier: .5
     SHEARS:
         MinimumLevel: 0
+        XpMultiplier: .5
+    BUCKET:
+        MinimumLevel: 0
         XpMultiplier: 1
+    FLINT_AND_STEEL:
+        MinimumLevel: 0
+        XpMultiplier: .3
     # Armor
     IRON_HELMET:
         MinimumLevel: 0
@@ -203,5 +209,8 @@ Repairables:
         MinimumLevel: 0
         XpMultiplier: .5
     BOW:
+        MinimumLevel: 0
+        XpMultiplier: .5
+    CARROT_STICK:
         MinimumLevel: 0
         XpMultiplier: .5
