--- a/src/main/resources/blocks.yml
+++ b/src/main/resources/blocks.yml
@@ -2,21 +2,17 @@
 #  Settings for Custom Excavation Blocks
 ###
 Excavation:
-    Block_1:
-        ID: 999
-        Data_Value: 0
+    Block_1|0:
         XP_Gain: 99
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
-    Block_2:
-        ID: 999
-        Data_Value: 0
+    Block_2|0:
         XP_Gain: 99
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
@@ -25,21 +21,17 @@ Excavation:
 #  Settings for Custom Herbalism Blocks
 ###
 Herbalism:
-    Block_1:
-        ID: 999
-        Data_Value: 0
+    Block_1|0:
         XP_Gain: 99
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
-    Block_2:
-        ID: 999
-        Data_Value: 0
+    Block_2|0:
         XP_Gain: 99
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
@@ -48,25 +40,21 @@ Herbalism:
 #  Settings for Custom Mining Blocks
 ###
 Mining:
-    Block_1:
-        ID: 999
-        Data_Value: 0
+    Block_1|0:
         XP_Gain: 99
         Is_Ore: true
         Tier: 1
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
-    Block_2:
-        ID: 999
-        Data_Value: 0
+    Block_2|0:
         XP_Gain: 99
         Is_Ore: true
         Tier: 1
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
@@ -75,23 +63,19 @@ Mining:
 #  Settings for Custom Woodcutting Blocks
 ###
 Woodcutting:
-    Block_1:
-        ID: 999
-        Data_Value: 0
+    Block_1|0:
         XP_Gain: 99
         Is_Log: true
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
-    Block_2:
-        ID: 999
-        Data_Value: 0
+    Block_2|0:
         XP_Gain: 99
         Is_Log: true
         Drop_Item: false
-        Drop_Item_ID: 999
+        Drop_Item_Name: BLOCK_DROP
         Drop_Item_Data_Value: 0
         Min_Drop_Item_Amount: 1
         Max_Drop_Item_Amount: 1
@@ -101,9 +85,5 @@ Woodcutting:
 #  (These blocks don't trigger abilities)
 ###
 Ability_Blocks:
-    Block_1:
-        ID: 999
-        Data_Value: 0
-    Block_2:
-        ID: 999
-        Data_Value: 0        
+    Block_1|0:
+    Block_2|0:
