--- a/src/main/resources/entities.yml
+++ b/src/main/resources/entities.yml
@@ -1,66 +1,42 @@
 #
-#  Settings for Hostile Mobs
-###
-Hostile:
-    Mob_1:
-        Class: CLASS_NAME
-        XP_Multiplier: 1.0
-        Tameable: false
-        Taming_XP: 250
-        CanBeSummoned: false
-        COTW_Material_ID: 999
-        COTW_Material_Data: 9
-        COTW_Material_Amount: 99
-    Mob_2:
-        Class: CLASS_NAME
-        XP_Multiplier: 1.0
-        Tameable: false
-        Taming_XP: 250
-        CanBeSummoned: false
-        COTW_Material_ID: 999
-        COTW_Material_Data: 9
-        COTW_Material_Amount: 99
+#  Settings for Custom Mobs
 #
-#  Settings for Neutral Mobs
+#  Mob name should be the entity type of the mob - usually "ModName_EntityName"
+#  Be sure to use the "_" character in place of any "." characters in the mob name.
 ###
-Neutral:
-    Mob_1:
-        Class: CLASS_NAME
-        XP_Multiplier: 1.0
-        Tameable: false
-        Taming_XP: 250
-        CanBeSummoned: false
-        COTW_Material_ID: 999
-        COTW_Material_Data: 9
-        COTW_Material_Amount: 99
-    Mob_2:
-        Class: CLASS_NAME
-        XP_Multiplier: 1.0
-        Tameable: false
-        Taming_XP: 250
-        CanBeSummoned: false
-        COTW_Material_ID: 999
-        COTW_Material_Data: 9
-        COTW_Material_Amount: 99
-#
-#  Settings for Passive Mobs
-###
-Passive:
-    Mob_1:
-        Class: CLASS_NAME
-        XP_Multiplier: 1.0
-        Tameable: false
-        Taming_XP: 250
-        CanBeSummoned: false
-        COTW_Material_ID: 999
-        COTW_Material_Data: 9
-        COTW_Material_Amount: 99
-    Mob_2:
-        Class: CLASS_NAME
-        XP_Multiplier: 1.0
-        Tameable: false
-        Taming_XP: 250
-        CanBeSummoned: false
-        COTW_Material_ID: 999
-        COTW_Material_Data: 9
-        COTW_Material_Amount: 99
+Mob_1:
+    Class: CLASS_NAME
+    XP_Multiplier: 1.0
+    Tameable: false
+    Taming_XP: 250
+    CanBeSummoned: false
+    COTW_Material: MATERIAL_NAME
+    COTW_Material_Data: 9
+    COTW_Material_Amount: 99
+Mob_2:
+    Class: CLASS_NAME
+    XP_Multiplier: 1.0
+    Tameable: false
+    Taming_XP: 250
+    CanBeSummoned: false
+    COTW_Material: MATERIAL_NAME
+    COTW_Material_Data: 9
+    COTW_Material_Amount: 99
+Mob_3:
+    Class: CLASS_NAME
+    XP_Multiplier: 1.0
+    Tameable: false
+    Taming_XP: 250
+    CanBeSummoned: false
+    COTW_Material: MATERIAL_NAME
+    COTW_Material_Data: 9
+    COTW_Material_Amount: 99
+Mob_4:
+    Class: CLASS_NAME
+    XP_Multiplier: 1.0
+    Tameable: false
+    Taming_XP: 250
+    CanBeSummoned: false
+    COTW_Material: MATERIAL_NAME
+    COTW_Material_Data: 9
+    COTW_Material_Amount: 99
