Improve validation messages of treasures.yml

--- a/src/main/resources/treasures.yml
+++ b/src/main/resources/treasures.yml
@@ -516,6 +516,8 @@ Hylian_Luck:
         Drop_Level: 0
         Drops_From: [Flowers]
     APPLE:
+        Amount: 1
+        XP: 0
         Drop_Chance: 100.0
         Drop_Level: 0
         Drops_From: [Flowers]
