--- a/src/main/resources/treasures.yml
+++ b/src/main/resources/treasures.yml
@@ -6,351 +6,433 @@ Fishing:
     LEATHER_BOOTS:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
+        Rarity: COMMON
     LEATHER_HELMET:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
+        Rarity: COMMON
     LEATHER_LEGGINGS:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
+        Rarity: COMMON
     LEATHER_CHESTPLATE:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
+        Rarity: COMMON
     WOOD_SWORD:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 200
+        Rarity: COMMON
     WOOD_SPADE:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 200
+        Rarity: COMMON
     WOOD_PICKAXE:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 200
+        Rarity: COMMON
     WOOD_AXE:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 200
+        Rarity: COMMON
     WOOD_HOE:
         Amount: 1
         XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 200
-    STONE_SWORD:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
-    STONE_SPADE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
-    STONE_PICKAXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
-    STONE_AXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
-    STONE_HOE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 20.0
-        Drop_Level: 0
-        Max_Level: 400
-    IRON_SWORD:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_SPADE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_PICKAXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_AXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_HOE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_BOOTS:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_HELMET:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_LEGGINGS:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    IRON_CHESTPLATE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    ENDER_PEARL:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 25.0
-        Drop_Level: 200
-        Max_Level: -1
-    GOLD_SWORD:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_SPADE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_PICKAXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_AXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_HOE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_BOOTS:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_HELMET:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_LEGGINGS:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    GOLD_CHESTPLATE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    BLAZE_ROD:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    RECORD_3:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    RECORD_4:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    RECORD_5:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 30.0
-        Drop_Level: 400
-        Max_Level: -1
-    DIAMOND_SWORD:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_SPADE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_PICKAXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_AXE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_HOE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_BOOTS:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_HELMET:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_LEGGINGS:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND_CHESTPLATE:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_6:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_7:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_8:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_9:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_10:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_11:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    RECORD_12:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    GHAST_TEAR:
-        Amount: 1
-        XP: 200
-        Drop_Chance: 35.0
-        Drop_Level: 600
-        Max_Level: -1
-    DIAMOND:
-        Amount: 5
-        XP: 200
-        Drop_Chance: 40.0
-        Drop_Level: 800
-        Max_Level: -1
-    IRON_INGOT:
-        Amount: 5
-        XP: 200
-        Drop_Chance: 40.0
-        Drop_Level: 800
-        Max_Level: -1
-    GOLD_INGOT:
-        Amount: 5
-        XP: 200
-        Drop_Chance: 40.0
-        Drop_Level: 800
-        Max_Level: -1
+        Rarity: COMMON
     INK_SACK_BLUE:
         Amount: 20
         XP: 200
-        Drop_Chance: 40.0
-        Drop_Level: 800
-        Max_Level: -1
+        Rarity: COMMON
+    STONE_SWORD:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    STONE_SPADE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    STONE_PICKAXE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    STONE_AXE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    STONE_HOE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_SWORD:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_SPADE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_PICKAXE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_AXE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_HOE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_BOOTS:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_HELMET:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_LEGGINGS:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_CHESTPLATE:
+        Amount: 1
+        XP: 200
+        Rarity: UNCOMMON
+    IRON_INGOT:
+        Amount: 5
+        XP: 200
+        Rarity: UNCOMMON
+    GOLD_INGOT:
+        Amount: 5
+        XP: 200
+        Rarity: UNCOMMON
+    IRON_SWORD:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    IRON_SPADE:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    IRON_PICKAXE:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    IRON_AXE:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    IRON_HOE:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    ENDER_PEARL:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    BLAZE_ROD:
+        Amount: 1
+        XP: 200
+        Rarity: RARE
+    IRON_BOOTS:
+        Amount: 1
+        XP: 200
+        Rarity: EPIC
+    IRON_HELMET:
+        Amount: 1
+        XP: 200
+        Rarity: EPIC
+    IRON_LEGGINGS:
+        Amount: 1
+        XP: 200
+        Rarity: EPIC
+    IRON_CHESTPLATE:
+        Amount: 1
+        XP: 200
+        Rarity: EPIC
+    GHAST_TEAR:
+        Amount: 1
+        XP: 200
+        Rarity: EPIC
+    DIAMOND:
+        Amount: 5
+        XP: 200
+        Rarity: EPIC
+    DIAMOND_SWORD:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_SPADE:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_PICKAXE:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_AXE:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_HOE:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_BOOTS:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_HELMET:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_LEGGINGS:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    DIAMOND_CHESTPLATE:
+        Amount: 1
+        XP: 200
+        Rarity: LEGENDARY
+    RECORD_3:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_4:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_5:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_6:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_7:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_8:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_9:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_10:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_11:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+    RECORD_12:
+        Amount: 1
+        XP: 200
+        Rarity: RECORD
+#
+#	Fishing drop rates
+###
+Item_Drop_Rates:
+    Tier_1:
+        TRAP: 7.68
+        COMMON: 7.50
+        UNCOMMON: 1.25
+        RARE: 0.25
+        EPIC: 0.10
+        LEGENDARY: 0.01
+        RECORD: 0.01
+    Tier_2:
+        TRAP: 2.50
+        COMMON: 6.50
+        UNCOMMON: 1.75
+        RARE: 0.75
+        EPIC: 0.50
+        LEGENDARY: 0.05
+        RECORD: 0.01
+    Tier_3:
+        TRAP: 1.50
+        COMMON: 3.50
+        UNCOMMON: 2.75
+        RARE: 1.25
+        EPIC: 1.00
+        LEGENDARY: 0.10
+        RECORD: 0.01
+    Tier_4:
+        TRAP: 1.00
+        COMMON: 2.00
+        UNCOMMON: 3.50
+        RARE: 2.25
+        EPIC: 1.50
+        LEGENDARY: 1.00
+        RECORD: 0.01
+    Tier_5:
+        TRAP: 0.25
+        COMMON: 1.50
+        UNCOMMON: 3.75
+        RARE: 2.50
+        EPIC: 2.00
+        LEGENDARY: 1.00
+        RECORD: 0.01
+    Tier_6:
+        TRAP: 0.10
+        COMMON: 1.00
+        UNCOMMON: 3.25
+        RARE: 3.75
+        EPIC: 2.50
+        LEGENDARY: 1.50
+        RECORD: 0.05
+    Tier_7:
+        TRAP: 0.05
+        COMMON: 0.25
+        UNCOMMON: 2.75
+        RARE: 4.00
+        EPIC: 5.00
+        LEGENDARY: 2.50
+        RECORD: 0.10
+    Tier_8:
+        TRAP: 0.01
+        COMMON: 0.10
+        UNCOMMON: 1.50
+        RARE: 6.00
+        EPIC: 7.50
+        LEGENDARY: 5.00
+        RECORD: 0.25
+#
+#	Fishing enchantment drop rates
+###
+Enchantments_Rarity:
+    COMMON:
+        EFFICIENCY: 1
+        UNBREAKING: 1
+        FORTUNE: 1
+        PROTECTION: 1
+        FIRE_PROTECTION: 1
+        FEATHER_FALLING: 1
+        BLAST_PROTECTION: 1
+        PROJECTILE_PROTECTION: 1
+        RESPIRATION: 1
+        THORNS: 1
+        SHARPNESS: 1
+        SMITE: 1
+        BANE_OF_ARTHROPODS: 1
+        POWER: 1
+    UNCOMMON:
+        EFFICIENCY: 2
+        PROTECTION: 2
+        FIRE_PROTECTION: 2
+        FEATHER_FALLING: 2
+        BLAST_PROTECTION: 2
+        PROJECTILE_PROTECTION: 2
+        SHARPNESS: 2
+        SMITE: 2
+        BANE_OF_ARTHROPODS: 2
+        KNOCKBACK: 1
+        LOOTING: 1
+        POWER: 2
+        PUNCH: 1
+    RARE:
+        EFFICIENCY: 3
+        UNBREAKING: 2
+        PROTECTION: 3
+        FIRE_PROTECTION: 3
+        FEATHER_FALLING: 3
+        BLAST_PROTECTION: 3
+        PROJECTILE_PROTECTION: 3
+        RESPIRATION: 2
+        SHARPNESS: 3
+        SMITE: 3
+        BANE_OF_ARTHROPODS: 3
+        FIRE_ASPECT: 1
+        LOOTING: 2
+        POWER: 3
+    EPIC:
+        EFFICIENCY: 4
+        FORTUNE: 2
+        AQUA_AFFINITY: 1
+        THORNS: 2
+        SHARPNESS: 4
+        SMITE: 4
+        BANE_OF_ARTHROPODS: 4
+        POWER: 4
+        FLAME: 1
+    LEGENDARY:
+        EFFICIENCY: 5
+        UNBREAKING: 3
+        FORTUNE: 3
+        PROTECTION: 4
+        FIRE_PROTECTION: 4
+        FEATHER_FALLING: 4
+        BLAST_PROTECTION: 4
+        PROJECTILE_PROTECTION: 4
+        RESPIRATION: 3
+        AQUA_AFFINITY: 2
+        THORNS: 3
+        SHARPNESS: 5
+        SMITE: 5
+        BANE_OF_ARTHROPODS: 5
+        KNOCKBACK: 2
+        FIRE_ASPECT: 2
+        LOOTING: 3
+        SILK_TOUCH: 1
+        POWER: 5
+        PUNCH: 2
+        INFINITY: 1
+
+Enchantment_Drop_Rates:
+    Tier_1:
+        COMMON: 5.00
+        UNCOMMON: 1.00
+        RARE: 0.10
+        EPIC: 0.01
+        LEGENDARY: 0.01
+    Tier_2:
+        COMMON: 7.50
+        UNCOMMON: 1.00
+        RARE: 0.10
+        EPIC: 0.01
+        LEGENDARY: 0.01
+    Tier_3:
+        COMMON: 7.50
+        UNCOMMON: 2.50
+        RARE: 0.25
+        EPIC: 0.10
+        LEGENDARY: 0.01
+    Tier_4:
+        COMMON: 10.0
+        UNCOMMON: 2.75
+        RARE: 0.50
+        EPIC: 0.10
+        LEGENDARY: 0.05
+    Tier_5:
+        COMMON: 10.0
+        UNCOMMON: 4.00
+        RARE: 0.75
+        EPIC: 0.25
+        LEGENDARY: 0.10
+    Tier_6:
+        COMMON: 9.50
+        UNCOMMON: 5.50
+        RARE: 1.75
+        EPIC: 0.50
+        LEGENDARY: 0.25
+    Tier_7:
+        COMMON: 8.50
+        UNCOMMON: 7.50
+        RARE: 2.75
+        EPIC: 0.75
+        LEGENDARY: 0.50
+    Tier_8:
+        COMMON: 7.50
+        UNCOMMON: 10.0
+        RARE: 5.25
+        EPIC: 1.50
+        LEGENDARY: 0.75
 #
 #  Settings for Excavation
 ###
