Remove level based bonus from Master Angler
Let's try this another way, instead of removing this passive ability all togheter I think it would be nice to keep the boat/biome catch rate boost. The level based boost was out of hand and counter-intuitive as it made leveling easier on high skill levels.

--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -159,6 +159,14 @@ Skills:
         IceFishing:
             # UnlockLevel: Fishing level when the Ice Fishing ability unlocks
             UnlockLevel: 50
+
+        MasterAngler:
+            # UnlockLevel: Fishing level when the Master Angler ability unlocks
+            # BoatMultiplier: Catch rate is multiplied by this modifier
+            # BiomeModifier: Catch rate is multiplied by this modifier
+            UnlockLevel: 125
+            BoatModifier: 2.0
+            BiomeModifier: 2.0
     #
     #  Settings for Herbalism
     ###
